// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "google/protobuf/empty.proto";
import "repr/src/global_id.proto";

package mz_expr.id;

message ProtoId {
    oneof kind {
        mz_repr.global_id.ProtoGlobalId global = 1;
        ProtoLocalId local = 2;
    }
}

message ProtoLocalId {
    uint64 value = 1;
}

message ProtoPartitionId {
    oneof kind {
        int32 kafka = 1;
        google.protobuf.Empty none = 2;
    }
}
